Formatierung gefixt Tabellen sind jetzt besser

--- a/versuch_2/durchfuehrung.tex
+++ b/versuch_2/durchfuehrung.tex
@@ -6,7 +6,7 @@ hier müssten noch ein foto vom versuchsaufbau und ein foto von den laserstrahle
 
 \begin{landscape}
 \begin{figure}
-\includegraphics[height=.9\textwidth]{bitmap.png}
+\includegraphics[height=\textwidth]{images/bitmap.png}
 \caption{Skizze des Versuchsaufbaus, nicht maßstabsgetreu} 
 \label{pic:skizze_versuchsaufbau}
 \end{figure}
