--- a/versuch_2/header.tex
+++ b/versuch_2/header.tex
@@ -3,6 +3,7 @@
 
 
 %Referenzen zwischen unterschiedlichen Dateien
+\usepackage{comment}
 \usepackage{xr}
 \externaldocument{theorie}
 \usepackage{lscape}
