Bilder hinzugefügt. Verbesserungen 1 Versuch vorgenommen

--- a/versuch_1/durchfuehrung.tex
+++ b/versuch_1/durchfuehrung.tex
@@ -1,18 +1,18 @@
 \section{Versuchsdurchführung}
 \subsection{Durchlassfilter als Frequenzfilter}
 Zur Überprüfung der Funktionsweise eines Frequenzfilters wurde zunächst die Schaltung aus
-Abb. \ref{plan:durchlass} auf Seite \pageref{plan:durchlass} wie in Abb. \ref{img:durchlass} realisiert. Es wurde die Spule \enquote{Leybold 56214} mit 500 Windungen und einer Induktivität von 9 mH verwendet, wobei das Augenmerk auf einer möglichst geringen Windungszahl liegt, um den in der Spule angesiedelten Widerstand möglichst gering zu halten. Dieser liegt für die Spule bei angegebenen 2,5 $ \Omega $, was durch Messung bestätigt wurde. Auf
-der anderen Seite musste auch eine hinreichend große Induktivität garantiert werden, damit die Resonanzfrequenz, in deren Umgebung die Messungen stattfanden, in einem gut erfassbaren Bereich lagen. Weiter wurde ein Plastikfolienkondensator der Firma \enquote{WIMA} der Kapazität 0,22 $  \mu F $ sowie in einem zweiten Teilversuch ein Kondensator gleicher Bauart, allerdings mit 4,7 $  \mu F $ Kapazität, verwendet. Da beide Teilversuche übereinstimmende Ergebnisse lieferten, wird in der Auswertung nur der erste Teilversuch dargestellt. Ferner wurden
+Abb. \ref{plan:durchlass} wie in Abb. \ref{img:durchlass} realisiert. Es wurde die Spule \enquote{Leybold 56214} mit 500 Windungen und einer Induktivität von 9 mH verwendet, wobei das Augenmerk auf einer möglichst geringen Windungszahl liegt, um den in der Spule angesiedelten Widerstand möglichst gering zu halten. Dieser liegt für die Spule bei angegebenen 2,5 $ \Omega $, was durch Messung bestätigt wurde. Auf
+der anderen Seite musste auch eine hinreichend große Induktivität garantiert werden, damit die Resonanzfrequenz, in deren Umgebung die Messungen stattfanden, in einem gut erfassbaren Bereich lagen. Weiter wurde ein Plastikfolienkondensator der Firma \enquote{WIMA} der Kapazität 0,22 $  \mu F $ sowie in einem zweiten Teilversuch ein Kondensator gleicher Bauart, allerdings mit 4,7 $  \mu F $ Kapazität, verwendet. Da beide Teilversuche die angestrebte Resonanzfrequenz gut trafen, wird in der Auswertung nur der erste Teilversuch dargestellt. Ferner wurden
 mit Hilfe eines Widerstandskasten verschiedene Widerstände im Bereich von 1 $ \Omega $ bis 20 $ \Omega $ eingesetzt.
 \paragraph{}
 Zur Erzeugung der Eingangsspannung wurde zunächst ein Frequenzgenerator der Marke Hameg (Programmable 15 MHz Function Generator, HM8131/2) verwendet, zur Vereinfachung und Automatisierung der Messung wurde dieser allerdings durch das Power-Cassy ersetzt \footnote{vgl. \cite[42f.]{cassy2013manual}} .
-Die Messung der über dem Widerstand abfallenden Ausgangsspannung wurde bei einem ersten Aufbau mit einem Oszilloskop (Tektronix TDS 2024 100MHz, PPL28/2/001) durchgeführt. Hierbei stellte sich allerdings heraus, dass die Messungen nicht die gewünschte Genauigkeit liefern konnten.(Siehe Abb. \ref{plot:oszi} auf Seite \pageref{plot:oszi})
+Die Messung der über dem Widerstand abfallenden Ausgangsspannung wurde bei einem ersten Aufbau mit einem Oszilloskop (Tektronix TDS 2024 100MHz, PPL28/2/001) durchgeführt. Hierbei stellte sich allerdings heraus, dass die Messungen nicht die gewünschte Genauigkeit liefern konnten. (Siehe Abb. \ref{plot:oszi})
 \begin{figure}
 	\includegraphics[width=.9\textwidth]{images/plot/oszi.png}
-\caption{Handnotierte Werte der Messung mit Oszilloskop}
+\caption{Sprünge in handnotierten Werten der Messung mit Oszilloskop klar erkennbar}
 \label{plot:oszi}
 \end{figure}
-Bei der optimierten Durchführung des Experiments haben wir stattdessen das Sensor-Cassy genutzt; Vorteil hierbei ist zudem klar die direkte Übertragung der Daten in die Cassy-Software.
+Um eine glattere Kurve zu erreichen wurde bei der optimierten Durchführung des Experiments stattdessen das Sensor-Cassy genutzt; Vorteil hierbei ist zudem klar die direkte Übertragung der Daten in die Cassy-Software.
 
 \begin{figure}[h]
 \centering
