--- a/versuch_1/theorie.tex
+++ b/versuch_1/theorie.tex
@@ -8,10 +8,10 @@ U=Z\cdot I
 $ 
 gilt \footnote{\cite[151 ff.]{demtroder2009experimentalphysik}}
 \begin{equation}
-U_a=\frac{R}{R+i\left(\omega L-\frac{1}{\omega C}\right)}\cdot U_e\\
+U_a(\omega)=\frac{R}{R+i\left(\omega L-\frac{1}{\omega C}\right)}\cdot U_e(\omega)\\
 \end{equation}
 \begin{equation}
-\Rightarrow\left| U_a \right| = \frac{R}{\sqrt{R^2+\left(\omega L - \frac{1}{\omega C}\right)}}\cdot \left| U_e \right|
+\Rightarrow\left| U_a (\omega)\right| = \frac{R}{\sqrt{R^2+\left(\omega L - \frac{1}{\omega C}\right)}}\cdot \left| U_e(\omega) \right|
 \end{equation}
 Bei der Frequenz
 \begin{equation}
@@ -72,10 +72,10 @@ Beim Sperrfilter werden die Spule und der Kondensator nun parallel geschaltet. (
 
 Analog zum Durchlassfilter ergibt sich nun
 \begin{equation}
-U_a=\frac{R}{R-i \frac{1}{\omega C - \frac{1}{\omega L}}}\cdot U_e\\
+U_a(\omega)=\frac{R}{R-i \frac{1}{\omega C - \frac{1}{\omega L}}}\cdot U_e(\omega)\\
 \end{equation}
 \begin{equation}
-\Rightarrow\left| U_a \right| = \frac{R}{\sqrt{R^2+\frac{1}{(\omega C - \frac{1}{\omega L})^2}}}\cdot \left| U_e \right|
+\Rightarrow\left| U_a(\omega) \right| = \frac{R}{\sqrt{R^2+\frac{1}{(\omega C - \frac{1}{\omega L})^2}}}\cdot \left| U_e(\omega) \right|
 \end{equation}
 Bei der Resonanzfrequenz (3) geht nun $\left| U_a \right|\longrightarrow 0$, d.h. die Frequenz $\omega_R$ wird blockiert, während andere Frequenzen durchgelassen werden.
 
