Letzte Änderungen vor Abgabe an Kappes

--- a/versuch_1/durchfuehrung.tex
+++ b/versuch_1/durchfuehrung.tex
@@ -9,7 +9,7 @@ Zur Erzeugung der Eingangsspannung wurde zunächst ein Frequenzgenerator der Mar
 Die Messung der über dem Widerstand abfallenden Ausgangsspannung wurde bei einem ersten Aufbau mit einem Oszilloskop (Tektronix TDS 2024 100MHz, PPL28/2/001) durchgeführt. Hierbei stellte sich allerdings heraus, dass die Messungen nicht die gewünschte Genauigkeit liefern konnten. (Siehe Abb. \ref{plot:oszi})
 \begin{figure}
 	\includegraphics[width=.9\textwidth]{images/plot/oszi.png}
-\caption{Sprünge in handnotierten Werten der Messung mit Oszilloskop klar erkennbar}
+\caption{Sprünge in handnotierten Werten der Messung mit Oszilloskop klar erkennbar (Durchlassfilter)}
 \label{plot:oszi}
 \end{figure}
 Um eine glattere Kurve zu erreichen wurde bei der optimierten Durchführung des Experiments stattdessen das Sensor-Cassy genutzt; Vorteil hierbei ist zudem klar die direkte Übertragung der Daten in die Cassy-Software.
