--- a/versuch_2/vorwort.tex
+++ b/versuch_2/vorwort.tex
@@ -9,4 +9,6 @@ musste. Dementsprechend bewegt sich das Licht unabhängig vom Bezugssystem des B
 Lichtgeschwindigkeit c, was auch als Einsteinsches Relaltivitätsprinzip bekannt ist. Der Grund dafür ist schlicht, 
 dass es die wesentliche Abänderung des Verständnisses von Raum und Zeit darstellt, welches schließlich zur 
 Lorentz-Transformation und der speziellen Relativitätstheorie führte. Somit kommt diesem Experiment eine herausragende Rolle 
-in der Entwicklung der modernen Physik zu. 
+in der Entwicklung der modernen Physik zu. Tatsächlich kann dieser Versuchsaufbau auch dazu verwendet werden, 
+Längenänderungen im Bereich von Wellenlängen des sichtbaren Lichts zu messen. Speziell wurde dies von uns dazu genutzt, 
+die thermische Ausdehnung eines Metallstabs zu untersuchen. 
