--- a/versuch_2/protokoll.tex
+++ b/versuch_2/protokoll.tex
@@ -3,7 +3,7 @@
 
 \title{Messung der temperaturabhängigen Ausdehnung mit Hilfe eines Michelson-Interferometers}
 \subtitle{PPG8}
-\date{November 2013}
+\date{November/Dezember 2013}
 \author{Udo Beier \and Leon Brückner \and Valentin Olpp \and Marco Zech \and Sebastian Ziegler}
 \maketitle
 \tableofcontents
