--- a/versuch_2/theorie.tex
+++ b/versuch_2/theorie.tex
@@ -21,7 +21,7 @@ Seien $ \vec{E}_{1} $ und $ \vec{E}_{2} $ die elektrischen Felder des einfallend
 \vec{E}_{2} = \vec{e}_{p} \cdot E_{2} \cdot e^{i(\omega_{2}t - k_{2} \cdot r + \phi_{2})}.
 \end{equation}
 
-Dabei sind $ E_{1}, E_{2} $ die Amplituden beider Felder, $ \omega_{1}, \omega_{2} $ die Frequenzen der beiden Schwingungen, $ r_{1}, r_{2} $ die zurückgelegten Wege der beiden Lichtstrahlen, $ k_{1}, k_{2} $ die Beträge des Wellenvektors k, der in Ausbreitungsrichtung zeigen soll und $ \vec{e}_{p} $ der Einheitsvektor in Richtung der Polarisation. Weiter sind  $ \phi_{1} $ und $ \phi_{2} $ die Phasen des elektrischen Feldes bei $ r_{1}, r_{2}, t = 0 $. 
+Dabei sind $ E_{1}, E_{2} $ die Amplituden beider Felder, $ \omega_{1}, \omega_{2} $ die Frequenzen der beiden Schwingungen, $ r_{1}, r_{2} $ die zurückgelegten Wege der beiden Lichtstrahlen, $ k_{1}, k_{2} $ die Beträge der Wellenvektoren $ \vec{k_{1}}, \vec{k_{2}} $, der in Ausbreitungsrichtung zeigen soll und $ \vec{e}_{p} $ der Einheitsvektor in Richtung der Polarisation. Weiter sind  $ \phi_{1} $ und $ \phi_{2} $ die Phasen des elektrischen Feldes bei $ r_{1}, r_{2}, t = 0 $. 
  
 Als Summe über beide Felder ergibt sich zeitabhängig: 
 \begin{equation}
@@ -86,24 +86,19 @@ I = I_{1} + I_{2} + 2 \sqrt{I_{1} I_{2}} \cdot \cos( k \cdot (r_{2} - r_{1}) + \
 
 \subsection{Das Michelson-Interferometer}
 
-Das Michelson-Interferometer gehört zur Klasse der Zweistrahlinterferometer. Seine Funktionsweise beruht darauf, dass ein polarisierter Laserstrahl mit Hilfe eines halbdurchlässigen Spiegels aufgespalten wird (siehe dazu Abb. ...). Beide Strahlen werden gespiegelt und so wieder am halbdurchlässigen Spiegel vereinigt. Aufgrund der unterschiedlich großen zurückgelegten Wegstrecken kommt es dort zu Interferenzeffekten, die vom genauen Aufbau des Interferometers abhängen.\\
+Das Michelson-Interferometer gehört zur Klasse der Zweistrahlinterferometer. Seine Funktionsweise beruht darauf, dass ein polarisierter Laserstrahl mit Hilfe eines halbdurchlässigen Spiegels aufgespalten wird (siehe dazu Abb. \ref{pic:skizze_versuchsaufbau}). Beide Strahlen werden gespiegelt und so wieder am halbdurchlässigen Spiegel vereinigt. Aufgrund der unterschiedlich großen zurückgelegten Wegstrecken kommt es dort zu Interferenzeffekten, die vom genauen Aufbau des Interferometers abhängen.\\
 Verändert man die Länge von einem der beiden Wege, so ändert sich auch die Phasenverschiebung zwischen beiden Lichtstrahlen und nach (\ref{formel:intensitaet}) auch die Intensität der interferierenden Strahlen und bildet eine sinusförmige Kurve. Durch Beobachtung der Verschiebung der Interferenzen kann also auf die Geschwindigkeit geschlossen werden, mit der sich die Länge des einen Weges ändert: 
-Hat sich das Interferenzmuster genau um $ 2 \pi $ verschoben, so hat sich nach (\ref{formel:intensitaet}) $ k \cdot \Delta r $ um $ 2 \pi $ vergrößert oder verkleinert. 
-Sei v die Geschwindigkeit, mit der der Spiegel 1 in Strahlrichtung vom Strahlteiler wegbewegt wird, so folgt: 
+Hat sich das Interferenzmuster genau um $ 2 \pi $ verschoben, so hat sich nach (\ref{formel:intensitaet}) $ k \cdot \Delta r $ um $ 2 \pi $ vergrößert oder verkleinert.
+Ein $ \Delta N $ von 1 entspricht deswegen genau einer Längenänderung um $ \frac{\lambda}{2} $, also:
+
 
 \begin{equation}
-\frac{d r_{1}}{d t} = 2 v.
+\Delta l = \frac{\lambda}{2} \cdot \Delta N. 
 \end{equation}
 
-Sei f die \enquote{Frequenz} der Schwingung der Interferenz, also die Frequenz des $ \cos $ in (\ref{formel:intensitaet}), dann gilt: 
-\begin{equation}
-f = \frac{1}{T} = \frac{d r_{1}}{d t} \cdot \frac{1}{\lambda} = 2 \frac{v}{\lambda},
-\end{equation}
-wobei $ \lambda $ die Wellenlänge des verwendeten Lasers ist. 
-Somit kann für eine sehr langsame Ausdehnung deren Geschwindigkeit bestimmt werden zu: 
-\begin{equation}
-v = \frac{f \cdot \lambda}{2}
-\end{equation}
+
+wobei $ \lambda $ die Wellenlänge des verwendeten Lasers ist und N die Anzahl der während der Längenänderung \enquote{vorbeigelaufenen} Ringe ist. 
+
 
 
 Weiterhin kann das vom Laser emittierte Strahlenbündel durch Einbringen von einer oder mehrerer Linsen zu einem divergenten Strahl oder einem breiteren, parallelen Strahlenbündel gewandelt werden. Oftmals geschieht dies mit Hilfe eines \enquote{Teleskops}, bei dem das Strahlenbündel eine Kombination aus konkaver und konvexer Linse durchläuft und danach parallel austritt. Im Falle eines zu Beginn ebenfalls parallelen Strahlenbündels, wie es vom Laser in guter Näherung emittiert wird, müssen dazu offenbar die beiden Brennpunkte aufeinander fallen.  \\
@@ -163,7 +158,7 @@ Nimmt man an, dass der Wärmeleitungskoeffizient innerhalb des Gegenstandes rela
 Im hier durchgeführten Experiment soll die Erwärmung eines Metallstabes von etwa $ -130 ^{\circ} C $ auf Raumtemperatur untersucht werden. Somit ergibt sich: 
 
 \begin{equation}
-\frac{dQ}{dt} \sim  \frac{T_M}{dt} \sim (T_{M} - T_{R}). 
+\frac{dQ}{dt} \sim  \frac{dT_M}{dt} \sim (T_{M} - T_{R}). 
 \end{equation}
 
 Als Lösung einer derartigen Differentialgleichung ergibt sich bekanntlich eine e-Funktion $k \cdot e^{\alpha \cdot t}$, auf die Bestimmung der Koeffizienten $k$ und $\alpha$ soll hier nicht weiter eingegangen werden. 
