--- a/versuch_2/durchfuehrung.tex
+++ b/versuch_2/durchfuehrung.tex
@@ -16,7 +16,7 @@ hier müssten noch ein foto vom versuchsaufbau und ein foto von den laserstrahle
 \subsection{Messung}
 Der Edelstahlstab wurde in ein Bad aus flüssigem Stickstoff ($T=-180^{\circ}C$) eingetaucht, aufgrund des Leidenfrost-Effekts war jedoch eine Abkühlung bis zu dieser Temperatur nicht möglich. Die Messung wurde bei einer gemessenen Temperatur von $T=-130^{\circ}C$ begonnen. Diese Art der Temperaturänderung des Stabs wurde gewählt, da die Ausdehnung des Stabs durch Aufheizung aus der Umgebungsluft vermutlich gleichmäßiger ist als z.B. durch Aufheizen des Stabs mittels Heizdraht o.Ä..
 
-Die Messung bestand daraus, die an einem Referenzpunkt an der Wand 'vorbeilaufenden' Maxima zu zählen. Die Zählung aller Maxima wäre stark fehleranfällig gewesen, also wurden die Maxima in 10-Sekunden-Intervallen gezählt, d.h. die Anzahl der Maxima, die innerhalb von 10 Sekunden am Referenzpunkt vorbeiliefen, wurde gezählt und notiert, nach weiteren 10 Sekunden begann die nächste Zählung, etc. 
+Die Messung bestand daraus, die an einem Referenzpunkt an der Wand \enquote{vorbeilaufenden} Maxima zu zählen. Die Zählung aller Maxima wäre stark fehleranfällig gewesen, also wurden die Maxima in 10-Sekunden-Intervallen gezählt, d.h. die Anzahl der Maxima, die innerhalb von 10 Sekunden am Referenzpunkt vorbeiliefen.  Dann wurden 10 Sekunden pausiert, danach wurde die nächste zehnsekündige Messung gestartet. 
 
 \subsection{Probleme}
 Die Durchführung des Versuchs gestaltete sich insgesamt schwierig. Das Interferenzmuster war trotz schwingungsgedämpftem Aufbau anfällig gegen Erschütterungen. Auch eine sehr genaue Justierung des Interferometers war notwendig, da schon kleinste Verkippungen der Spiegel zusätzliche Streifenmuster erzeugten, die sich mit dem eigentlichen, d.h. durch den Strahlteiler erzeugten, Interferenzmuster überlagerten.
