Änderungen vor Abgabe an den Tutor

--- a/versuch_2/durchfuehrung.tex
+++ b/versuch_2/durchfuehrung.tex
@@ -22,4 +22,4 @@ Die Messung bestand daraus, die an einem Referenzpunkt an der Wand \enquote{vorb
 Die Durchführung des Versuchs gestaltete sich insgesamt schwierig. Das Interferenzmuster war trotz schwingungsgedämpftem Aufbau anfällig gegen Erschütterungen. Auch eine sehr genaue Justierung des Interferometers war notwendig, da schon kleinste Verkippungen der Spiegel zusätzliche Streifenmuster erzeugten, die sich mit dem eigentlichen, d.h. durch den Strahlteiler erzeugten, Interferenzmuster überlagerten.
 
 Ursprünglich war eine elektronische Messung mit CASSY geplant, bei der das Interferenzmuster auf den Sensor einer Fotodiode abgebildet werden sollte, sodass aus den Spannungsmaxima und -minima die Interferenzmaxima und -minima erkennbar sein sollten.
-In der Praxis war dies jedoch fast unmöglich, da die Ausschläge aufgrund der geringen Intensität des Lichts nach Aufweitung und Durchgang durch den Strahlteiler so gering waren, dass sie selbst bei maximaler Verstärkung an der Diode quasi nicht vom Grundrauschen der Diode unterscheidbar waren. Dies konnte zwar durch geringere Aufweitung (Teleskopaufbau) teilweise behoben werden (d.h. auf einem Oszilloskop waren die Maxima und Minima deutlich zu erkennen), bei einer probeweise durchgeführten Messung mit CASSY waren die Daten jedoch nicht verwertbar, auch bei einer zweiten Messung mit höherer zeitlicher Auflösung waren keine klaren Ausschläge zu erkennen, sodass die Messung schließlich doch per Hand durchgeführt wurde.
+In der Praxis war dies jedoch sehr schwierig, da die Ausschläge aufgrund der geringen Intensität des Lichts nach Aufweitung und Durchgang durch den Strahlteiler so gering waren, dass sie selbst bei maximaler Verstärkung an der Diode quasi nicht vom Grundrauschen der Diode unterscheidbar waren. Dies konnte zwar durch geringere Aufweitung (Teleskopaufbau) teilweise behoben werden (d.h. auf einem Oszilloskop waren die Maxima und Minima deutlich zu erkennen), bei einer probeweise durchgeführten Messung mit CASSY waren die Daten jedoch nicht verwertbar, auch bei einer zweiten Messung mit höherer zeitlicher Auflösung waren keine klaren Ausschläge zu erkennen, sodass die Messung schließlich doch per Hand durchgeführt wurde.
