--- a/versuch_2/literature.bib
+++ b/versuch_2/literature.bib
@@ -1,11 +1,16 @@
-@article{demtroder2009experimentalphysik,
-  title={Experimentalphysik 2: Elektrizit{\"a}t und Optik. 5., {\"u}berarb. und erw. Aufl.},
-  author={Demtr{\"o}der, Wolfgang},
-  journal={Au. Reihe: Springer-Lehrbuch Bandwerk Experimentalphysik},
-  volume={2},
-  year={2009}
-  publisher={Springer DE}
+@article{praktikumwaerme
+,
+title = {Praktikum der Technischen Chemie
+Wärmeübertragung}
+,
+  url={www.uni-oldenburg.de/tchemie/Praktikum/Waermeuebertragung.pdf‎
+},
+  author={Prof. Dr. Axel Brehm
+},
+  year={2009},
+  publisher={Uni Oldenburg}
 }
+
 @article{cassy2013manual,
   title={Handbuch CASSY Lab 2.},
   author={Hund, Michael},
