--- a/versuch_2/theorie.tex
+++ b/versuch_2/theorie.tex
@@ -115,10 +115,11 @@ Sind etwa die reflektierenden Spiegel nicht exakt senkrecht zum einfallenden Str
 
 
 \subsection{Thermische Längenänderung}
-Wird ein Material erhitzt, so dehnt es sich in den meisten Fällen aus. Dies kann im Standard-Atom-Modell für einen Feststoff veranschaulicht werden: Wird dem Stoff thermische Energie zugeführt, bedeutet dies effektiv eine Zunahme der kinetischen Energie der Atomrümpfe. Dadurch nimmt die Amplitude von deren Schwingung um die Ruhelage zu und es kommt effektiv zu einer \enquote{Streckung} des Materials in alle Raumrichtungen. Eine exakte Beschreibung ist tatsächlich deutlich komplizierter und erfordert die Verwendung von Quantenmechanik. Im Allgemeinen ergibt sich kein einfacher Verlauf für $ l(T) $, allerdings kann die Längenänderung für einen bestimmten Temperaturbereich durch einen linearen Verlauf angenähert werden: 
+Wird ein Material erhitzt, so dehnt es sich in den meisten Fällen aus. Dies kann im Standard-Atom-Modell für einen Feststoff veranschaulicht werden: Wird dem Stoff thermische Energie zugeführt, bedeutet dies effektiv eine Zunahme der kinetischen Energie der Atomrümpfe. Dadurch nimmt die Amplitude von deren Schwingung um die Ruhelage zu und es kommt effektiv zu einer \enquote{Streckung} des Materials in alle Raumrichtungen. Eine exakte Beschreibung ist tatsächlich deutlich komplizierter und erfordert die Verwendung von Quantenmechanik. Im Allgemeinen ergibt sich kein einfacher Verlauf für $ l(T) $, allerdings kann die Längenänderung für einen bestimmten Temperaturbereich durch einen linearen Verlauf angenähert werden 
 
 \begin{equation}
 \frac{ \Delta l}{l_{0}} = \alpha \cdot (T-T_{0}), 
+\label{formel:ausdehnung}
 \end{equation}
 
 wobei $ l_{0} $ die eindimensionale Ausdehnung bei der Temperatur $ T_{0} $ ist. $ \alpha $ heißt der Längenausdehnungskoeffizient und ist insbesondere vom Material abhängig. 
@@ -149,7 +150,7 @@ und nach Einsetzen in \ref{form:j}:
 \end{equation}
 wobei hier $\Delta$ den Laplace-Operator darstellt. 
 \\
-Ein weiterer Effekt bei der Übertragung von Wärme ist die Konvektion. Diese bezeichnet allgemein den Transport von Wärme durch Strömungen in Flüssigkeiten oder Gasen. Die Konvektion lässt sich im Allgemeinen nur sehr schwer exakt beschreiben, da die Grundlage hierfür von der Navier-Stokes-Gleichung gebildet wird, die bis heute nicht allgemein gelöst wurde. Nach (einer Quelle die noch gefunden werden muss) gilt allerdings für den Wärmetransport von einem Gegenstand weg innerhalb eines Gases/ einer Flüssigkeit: 
+Ein weiterer Effekt bei der Übertragung von Wärme ist die Konvektion. Diese bezeichnet allgemein den Transport von Wärme durch Strömungen in Flüssigkeiten oder Gasen. Die Konvektion lässt sich im Allgemeinen nur sehr schwer exakt beschreiben, da die Grundlage hierfür von der Navier-Stokes-Gleichung gebildet wird, die bis heute nicht allgemein gelöst wurde. Nach \cite{pratikumwaerme} gilt allerdings für den Wärmetransport von einem Gegenstand weg innerhalb eines Gases/ einer Flüssigkeit: 
 \begin{equation}
 \frac{dQ}{dt} \sim \Delta T,
 \end{equation}
