Änderungen Tabelle im Anhang

--- a/versuch_2/anhang.tex
+++ b/versuch_2/anhang.tex
@@ -1,282 +1,143 @@
 \section{Anhang}
-\begin{table}
+\nopagebreak
+\begin{footnotesize}
+\begin{table}[h]
 \centering
 \begin{tabular}{rl}
+t in s & T in $^{\circ}C$\\
+\toprule
 20	&	-129,68\\
-30	&	-127,98\\
 40	&	-126,28\\
-50	&	-124,97\\
 60	&	-122,58\\
-70	&	-120,96\\
 80	&	-119,19\\
-90	&	-117,43\\
-100	&	-115,6\\
-110	&	-114,2\\
+100	&	-115,60\\
 120	&	-112,51\\
-130	&	-110,68\\
 140	&	-109,13\\
-150	&	-107,72\\
 160	&	-106,18\\
-170	&	-104,35\\
 180	&	-103,22\\
-190	&	-101,33\\
 200	&	-99,93\\
-210	&	-98,5\\
 220	&	-97,27\\
-230	&	-95,66\\
 240	&	-94,43\\
-250	&	-93,13\\
 260	&	-91,52\\
-270	&	-90,22\\
-280	&	-88,8\\
-290	&	-87,19\\
+280	&	-88,80\\
 300	&	-86,22\\
-310	&	-84,79\\
 320	&	-83,37\\
-330	&	-82,08\\
 340	&	-81,04\\
-350	&	-79,53\\
 360	&	-78,27\\
-370	&	-77,08\\
 380	&	-75,88\\
-390	&	-74,68\\
 400	&	-73,61\\
-410	&	-72,11\\
 420	&	-71,21\\
-430	&	-70,01\\
 440	&	-68,82\\
-450	&	-67,98\\
-460	&	-66,9\\
-470	&	-65,35\\
+460	&	-66,90\\
 480	&	-64,39\\
-490	&	-63,49\\
 500	&	-62,47\\
-510	&	-61,28\\
 520	&	-60,56\\
-530	&	-59,45\\
 540	&	-58,19\\
-550	&	-56,7\\
 560	&	-55,72\\
-570	&	-55,1\\
 580	&	-54,41\\
-590	&	-53,49\\
 600	&	-52,63\\
-610	&	-51,77\\
-620	&	-50,8\\
-629	&	-50,11\\
+620	&	-50,80\\
 640	&	-49,19\\
-650	&	-48,45\\
 660	&	-47,82\\
-670	&	-46,62\\
 680	&	-46,22\\
-690	&	-45,36\\
 699	&	-44,56\\
-710	&	-43,92\\
 720	&	-43,18\\
-730	&	-42,27\\
 740	&	-41,46\\
-750	&	-40,83\\
 760	&	-39,98\\
-770	&	-39,32\\
 780	&	-38,82\\
-790	&	-38,11\\
-800	&	-37,34\\
-810	&	-36,57\\
-820	&	-35,86\\
-830	&	-35,42\\
-840	&	-34,65\\
-850	&	-34,1\\
-860	&	-33,38\\
-870	&	-32,78\\
-880	&	-32,12\\
-890	&	-31,24\\
-900	&	-31,02\\
-910	&	-30,15\\
-920	&	-29,6\\
-930	&	-29,16\\
-940	&	-28,39\\
-950	&	-27,95\\
-960	&	-27,34\\
-970	&	-26,74\\
-980	&	-25,97\\
-990	&	-25,58\\
-1000	&	-24,87\\
-1010	&	-24,38\\
-1020	&	-23,94\\
-1030	&	-23,17\\
-1040	&	-22,35\\
-1050	&	-21,91\\
-1060	&	-21,08\\
-1070	&	-20,54\\
-1080	&	-20,09\\
-1090	&	-19,52\\
-1100	&	-19,2\\
-1110	&	-18,73\\
-1120	&	-18,16\\
-1130	&	-17,75\\
-1140	&	-17,23\\
-1150	&	-16,55\\
-1160	&	-16,24\\
-1170	&	-15,98\\
-1180	&	-15,3\\
-1190	&	-14,78\\
-1200	&	-14,52\\
-1210	&	-14,0\\
-1220	&	-13,43\\
-1230	&	-13,01\\
-1240	&	-12,64\\
-1250	&	-12,12\\
-1260	&	-11,81\\
-1270	&	-10,93\\
-1280	&	-10,77\\
-1290	&	-10,3\\
-1299	&	-9,93\\
-1310	&	-9,62\\
-1320	&	-9,31\\
-1330	&	-8,74\\
-1340	&	-8,58\\
-1350	&	-7,54\\
-1360	&	-7,23\\
-1370	&	-6,86\\
-1380	&	-6,81\\
-1390	&	-6,24\\
-1400	&	-5,82\\
-1410	&	-5,72\\
-1420	&	-5,2\\
-1430	&	-5,04\\
-1440	&	-4,57\\
-1450	&	-4,26\\
-1460	&	-3,84\\
-1470	&	-3,53\\
-1480	&	-3,43\\
-1490	&	-3,06\\
-1500	&	-3,01\\
-1510	&	-2,49\\
-1520	&	-2,12\\
-156	&	-106,6\\
-165	&	-105,05\\
-176	&	-103,5\\
-186	&	-102,03\\
-196	&	-100,62\\
-206	&	-99,02\\
-216	&	-97,73\\
-226	&	-96,05\\
-235	&	-94,94\\
-246	&	-93,59\\
-256	&	-92,16\\
-266	&	-90,87\\
-276	&	-89,45\\
-286	&	-88,03\\
-296	&	-86,73\\
-306	&	-85,18\\
-528	&	-59,73\\
-538	&	-58,53\\
-548	&	-56,93\\
-1527	&	-1,97\\
-1537	&	-1,81\\
-1547	&	-1,45\\
-1556	&	-1,08\\
-1567	&	-0,56\\
-1577	&	-0,67\\
-1587	&	-0,41\\
-1597	&	0,11\\
-1607	&	0,11\\
-1617	&	0,41\\
-1626	&	0,36\\
-1637	&	0,66\\
-1647	&	0,71\\
-1657	&	0,66\\
-1667	&	0,81\\
-1677	&	1,06\\
-1687	&	1,41\\
-1697	&	1,46\\
-1707	&	1,97\\
-1717	&	2,17\\
-1727	&	2,41\\
-1737	&	2,67\\
-1747	&	2,77\\
-1757	&	3,32\\
-320	&	-83,37\\
-330	&	-82,08\\
-340	&	-81,04\\
-350	&	-79,53\\
-360	&	-78,27\\
-370	&	-77,08\\
-380	&	-75,88\\
-390	&	-74,68\\
-400	&	-73,61\\
-410	&	-72,11\\
-420	&	-71,21\\
-430	&	-70,01\\
-440	&	-68,82\\
-450	&	-67,98\\
-460	&	-66,9\\
-470	&	-65,35\\
-480	&	-64,39\\
-490	&	-63,49\\
-500	&	-62,47\\
-510	&	-61,28\\
-520	&	-60,56\\
-1763	&	3,37\\
-1774	&	3,72\\
-1784	&	3,77\\
-1794	&	3,87\\
-1804	&	4,17\\
-1814	&	4,42\\
-1824	&	4,18\\
-1834	&	4,48\\
-1844	&	4,68\\
-1854	&	4,84\\
-1864	&	4,89\\
-1874	&	5,09\\
-1884	&	5,34\\
-1894	&	5,5\\
-1904	&	5,7\\
-1914	&	5,9\\
-1924	&	5,95\\
-1934	&	6,15\\
-1944	&	6,25\\
-1954	&	6,2\\
-1964	&	6,6\\
-1974	&	6,75\\
-1984	&	6,8\\
-1994	&	7,1\\
-2004	&	7,2\\
-2014	&	7,3\\
-2024	&	7,45\\
-2034	&	7,6\\
-2044	&	7,81\\
-2054	&	7,95\\
-2064	&	8,01\\
-2074	&	8,21\\
-2084	&	8,31\\
-2094	&	8,31\\
-2104	&	8,41\\
-2114	&	8,86\\
-2123	&	8,71\\
-2134	&	8,76\\
-2144	&	9,01\\
-2154	&	9,21\\
-2164	&	9,21\\
-2174	&	9,31\\
-2184	&	9,56\\
-2193	&	9,51\\
-2204	&	9,61\\
-2214	&	9,61\\
-2224	&	9,81\\
-2234	&	9,81\\
-2244	&	10,01\\
-2254	&	9,96\\
-2264	&	9,96\\
-2274	&	10,21\\
-2284	&	10,16\\
-2294	&	10,21\\
-2304	&	10,36\\
-2314	&	10,56\\
-2324	&	10,46\\
-2334	&	10,71\\
-2344	&	10,81\\
-2354	&	10,81
+\multicolumn{2}{c}{\dots}\\
 \end{tabular}
-\caption{A simple longtable example}
+\begin{tabular}{c|c}
+&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\
+\end{tabular}
+\begin{tabular}{rl}
+\multicolumn{2}{c}{\dots}\\
+800	&	-37,34\\
+820	&	-35,86\\
+840	&	-34,65\\
+860	&	-33,38\\
+880	&	-32,12\\
+900	&	-31,02\\
+920	&	-29,60\\
+940	&	-28,39\\
+960	&	-27,34\\
+980	&	-25,97\\
+1000	&	-24,87\\
+1020	&	-23,94\\
+1040	&	-22,35\\
+1060	&	-21,08\\
+1080	&	-20,09\\
+1100	&	-19,20\\
+1120	&	-18,16\\
+1140	&	-17,23\\
+1160	&	-16,24\\
+1180	&	-15,30\\
+1200	&	-14,52\\
+1220	&	-13,43\\
+1240	&	-12,64\\
+1260	&	-11,81\\
+1280	&	-10,77\\
+1299	&	-9,93\\
+1320	&	-9,31\\
+1340	&	-8,58\\
+1360	&	-7,23\\
+1380	&	-6,81\\
+1400	&	-5,82\\
+1420	&	-5,20\\
+1440	&	-4,57\\
+1460	&	-3,84\\
+1480	&	-3,43\\
+1500	&	-3,01\\
+1520	&	-2,12\\
+1540	&	-1,71\\
+1560	&	-0,87\\
+\multicolumn{2}{c}{\dots}\\
+\end{tabular}
+\begin{tabular}{c|c}
+&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\
+\end{tabular}
+\begin{tabular}{rl}
+\multicolumn{2}{c}{\dots}\\
+1580	&	-0,30\\
+1600	&	-0,04\\
+1620	&	0,31\\
+1640	&	0,71\\
+1660	&	0,81\\
+1680	&	1,26\\
+1700	&	1,61\\
+1720	&	2,27\\
+1740	&	2,92\\
+1760	&	3,27\\
+1780	&	3,57\\
+1800	&	4,17\\
+1820	&	4,23\\
+1840	&	4,38\\
+1860	&	4,89\\
+1880	&	5,14\\
+1900	&	5,60\\
+1920	&	5,95\\
+1940	&	6,25\\
+1960	&	6,55\\
+1980	&	6,60\\
+2000	&	7,00\\
+2019	&	7,30\\
+2040	&	7,71\\
+2060	&	8,01\\
+2080	&	8,31\\
+2100	&	8,66\\
+2120	&	8,86\\
+2140	&	8,91\\
+2160	&	9,21\\
+2180	&	9,41\\
+2200	&	9,56\\
+2220	&	9,86\\
+2240	&	9,96\\
+2260	&	10,06\\
+2280	&	10,21\\
+2300	&	10,41\\
+2320	&	10,41\\
+2340	&	10,91\\
+\end{tabular}
+\caption{Temperaturverlauf über die Zeit des Experiments}
 \end{table}
+\end{footnotesize}
